src/test/ui/parser-recovery-1.stderr
error: this file contains an un-closed delimiter
  --> $DIR/parser-recovery-1.rs:15:55
   |
LL | trait Foo {
   |           - un-closed delimiter
LL |     fn bar() {
   |              - this delimiter might not be properly closed...
...
LL | }
   | - ...as it matches this but it has different indentation
...
LL | }
   |                                                       ^

error: unexpected token: `;`
  --> $DIR/parser-recovery-1.rs:12:15
   |
LL |     let x = y.;
   |               ^

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/parser-recovery-1.rs:7:17
   |
LL |         let x = foo();
   |                 ^^^ not found in this scope

error[E0425]: cannot find value `y` in this scope
  --> $DIR/parser-recovery-1.rs:12:13
   |
LL |     let x = y.;
   |             ^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
